# Palmbot

./: Documentation.md  List of commands.md  README.md  alive.py  draft.txt  feedback.csv  functions.py  links.md  main.py  pyproject.toml  stats.csv  text.py
data/: feedback.csv  palmwall_clones.csv  stats.csv
data/encrypted/: on_member_join.csv  palmwall.csv  schedule.csv  volunteer_hours.csv
deped/: ap_cal.py  restarter.py
feedback_files/: feedback_file_1
notes/: draft.txt  links.md
notes.gitignore/: draft.py  test.py  vh_set.py  wall.py
